@startuml
'https://plantuml.com/class-diagram

abstract class MenhGiaATM {
    # int giaTri
    + {abstract} MenhGiaATM thietLapKeTiep(MenhGiaATM keTiep)
    + {abstract} void rutTien(int soTien)
}

class MenhGiaThapNhat
class MenhGia

MenhGiaATM <|-- MenhGia
MenhGiaATM <|-- MenhGiaThapNhat
MenhGia --> MenhGiaATM : "keTiep"


@enduml